<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/color" />

    <RadioGroup
        android:id="@+id/rgColores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbRojo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rojo" />

        <RadioButton
            android:id="@+id/rbVerde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verde" />

        <RadioButton
            android:id="@+id/rbAzul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/azul" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/estilo" />

    <CheckBox
        android:id="@+id/cbNegrita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/negrita" />

    <CheckBox
        android:id="@+id/cbCursiva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cursiva" />

    <TextView
        android:id="@+id/lblPrueba"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_de_prueba"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_error"
        android:textSize="48sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swcOscuro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modo_oscuro" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swcLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/informacion_log" />
</LinearLayout>